# TestAlex

./: .coverage  .env.test  .eslintrc.json  .firebaserc  .gitignore  .repo_scan.sh  ACIM_GUIDE_DESIGN_SYSTEM.md  AUTONOMOUS_COLLABORATION_PLAN.md  AUTONOMOUS_CONTRIBUTIONS_COMPLETE.md  AUTONOMOUS_DEPLOYMENT_COMPLETE.md  AUTONOMOUS_DEVELOPMENT_PLAN.md  AUTONOMOUS_IMPROVEMENT_PIPELINE.md  AUTONOMOUS_ORCHESTRATION_COMPLETION.md  AUTONOMOUS_SYSTEM_COMPLETION_SUMMARY.md  AUTONOMOUS_SYSTEM_VALIDATION.md  CI_CD_FAILURE_ANALYSIS.md  CI_CD_PROPER_ARCHITECTURE.md  CI_STABILIZATION_REPORT.md  DEPLOYMENT.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MICROSERVICES_ARCHITECTURE_PLAN.md  MOBILE_APPS_README.md  NEXT_STEPS_FOR_GREATER_GOOD.md  ORCHESTRATION_SUMMARY.md  ORCHESTRATOR_V2_COMPLETION.md  POST_DEPLOY_HEALTH_CHECK_SUMMARY.md  PRODUCTION_HARDENING_REPORT.md  PRODUCTION_HEALTH_STATUS.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  PROMPT_SYSTEM_VALIDATION.md  QUICK_PAYMENT_SETUP.md  README-TESTING.md  README.md  RESPONSIVE_IMPLEMENTATION.md  REVENUE_OPTIMIZATION_IMPLEMENTATION.md  ROLLBACK_PROCEDURES.md  SECURITY_RESOLUTION_COMPLETE.md  (+84 more)
ACIMguide/: App.js  (+7 more)
agentic-rag-system/: AUTONOMOUS_DEVELOPMENT_PLAN.md  AUTONOMOUS_EXECUTION_RECOMMENDATION.md  EVALUATION_README.md  PHASE1_INTEGRATION_REPORT.md  PHASE_1_PLAN.md  PROGRESS_LOG.md  README.md  SPRINT_1_2_SUMMARY.md  SPRINT_2_1_DAY_1_COMPLETE.md  business_intelligence_rag.py  pyproject.toml  test_evaluation.py  test_system.py  test_tools.py  validate_phase1.py  validate_phase1_fixed.py
agentic-rag-system/agentic_rag/: __init__.py  cli.py
agentic-rag-system/examples/: ab_testing_demo.py  evaluation_workflow_demo.py
agentic-rag-system/test_data/: README.md  test_code.py
agentic-rag-system/tests/: __init__.py  conftest.py  test_cli.py  test_cli_basic.py  test_end_to_end.py  test_integration.py  test_integration_phase1.py  test_models.py
(+409 files in other folders)
